Updated the Frontend

--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,38 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    color: rgb(0, 0, 0);
-    border-color: #4438ea;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0 auto;
 }
-
+.heading{
+    text-align: center;
+    display: block;
+}
+.logo{
+    width: 150px;
+    height: 150px;
+    position:absolute;
+    margin-top: 20px;
+    top: 5;
+    border: 1.5px solid black;
+    margin-left: 55px;
+}
+.title1{
+    width: 800px;
+    padding-top: 10px;
+    margin-right: 0px;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: left;
+}
 body {
-    width: 100%;
+    width: 70%;
     height: 100vh;
-    background-image: linear-gradient(to right bottom, #828282, #839fb5, #5fc5d0, #73e7b8, #d6fb84);
+
     background-repeat: no-repeat;
   background-attachment: fixed;
     display: flex;
     align-items: center;
     flex-direction: column;
+    font-size: x-large;
 }
 
 table{
@@ -49,7 +67,7 @@ thead {
 }
 
 tr:hover {
-    background-color: #652479;
+    background-color: white;
     transform: scale(1.1);
 }
 
@@ -61,13 +79,27 @@ tr:hover svg {
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Search_Icon.svg/1024px-Search_Icon.svg.png');
     background-position: 10px 12px; 
     background-repeat: no-repeat;
-    width: 100%; 
+    width: 700px; 
     font-size: 16px;
     padding: 12px 20px 12px 40px; 
     border: 1px solid #ddd;
-    margin-bottom: 12px; 
+    margin-bottom: 0px; 
   }
 
   h2,input{
       margin-top: 25px;
+  }
+ .bg {
+    min-height: 100%;
+    min-width: 1024px;
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0.2;
+  }
+  .bgimg{
+      background-image: url('GDSC.png');
+      width: 1200px;
   }
