--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,13 @@
 .logo{
     width: 150px;
     height: 150px;
-    position:absolute;
+    position: absolute;
     margin-top: 20px;
     top: 5;
-    
-    margin-left: 55px;
+    margin-left: 350px;
 }
 .title1{
+    position: absolute;
     width: 800px;
     padding-top: 10px;
     margin-right: 0px;
@@ -24,23 +24,24 @@
     text-align: left;
 }
 body {
-    width: 70%;
+    width: 100%;
     height: 100vh;
-
+    background-image: linear-gradient(to right bottom, #828282, #839fb5, #5fc5d0, #73e7b8, #d6fb84);
     background-repeat: no-repeat;
   background-attachment: fixed;
     display: flex;
     align-items: center;
     flex-direction: column;
-    font-size: x-large;
+    font-size: large;
 }
 
 table{
     text-align: center;
-    width: 80%;
+    width: 70%;
     border-collapse: collapse;
     border: 1px solid black;
 }
+
 
 tr {
     transition: all 0.3s ease;
@@ -99,7 +100,4 @@ tr:hover svg {
     left: 0;
     opacity: 0.2;
   }
-  .bgimg{
-      background-image: url('GDSC.png');
-      width: 1200px;
-  }
+ 
